test/files/neg/auto-application.scala
class Test {
  ("": Any).##()
  ("": AnyRef).##()
  ("": Object).##()
}
